--- a/css/materialdesignicons.css
+++ b/css/materialdesignicons.css
@@ -1,8 +1,8 @@
 /* MaterialDesignIcons.com */
 @font-face {
   font-family: "Material Design Icons";
-  src: url("../fonts/materialdesignicons-webfont.eot?v=2.2.43");
-  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=2.2.43") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=2.2.43") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=2.2.43") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=2.2.43") format("truetype"), url("../fonts/materialdesignicons-webfont.svg?v=2.2.43#materialdesigniconsregular") format("svg");
+  src: url("../fonts/materialdesignicons-webfont.eot?v=2.3.50");
+  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=2.3.50") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=2.3.50") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=2.3.50") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=2.3.50") format("truetype"), url("../fonts/materialdesignicons-webfont.svg?v=2.3.50#materialdesigniconsregular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -83,6 +83,10 @@
 
 .mdi-account-multiple:before {
   content: "\F00E";
+}
+
+.mdi-account-multiple-check:before {
+  content: "\F8C4";
 }
 
 .mdi-account-multiple-minus:before {
@@ -261,10 +265,6 @@
   content: "\F6BD";
 }
 
-.mdi-allo:before {
-  content: "\F801";
-}
-
 .mdi-alpha:before {
   content: "\F02B";
 }
@@ -281,7 +281,11 @@
   content: "\F02D";
 }
 
-.mdi-amazon-clouddrive:before {
+.mdi-amazon-alexa:before {
+  content: "\F8C5";
+}
+
+.mdi-amazon-drive:before {
   content: "\F02E";
 }
 
@@ -337,6 +341,10 @@
   content: "\F036";
 }
 
+.mdi-apple-icloud:before {
+  content: "\F038";
+}
+
 .mdi-apple-ios:before {
   content: "\F037";
 }
@@ -361,10 +369,6 @@
   content: "\F636";
 }
 
-.mdi-apple-mobileme:before {
-  content: "\F038";
-}
-
 .mdi-apple-safari:before {
   content: "\F039";
 }
@@ -379,6 +383,10 @@
 
 .mdi-apps:before {
   content: "\F03B";
+}
+
+.mdi-arch:before {
+  content: "\F8C6";
 }
 
 .mdi-archive:before {
@@ -711,6 +719,10 @@
 
 .mdi-av-timer:before {
   content: "\F06B";
+}
+
+.mdi-axe:before {
+  content: "\F8C7";
 }
 
 .mdi-azure:before {
@@ -1385,6 +1397,10 @@
   content: "\F5DD";
 }
 
+.mdi-bullseye-arrow:before {
+  content: "\F8C8";
+}
+
 .mdi-bus:before {
   content: "\F0E7";
 }
@@ -1395,6 +1411,10 @@
 
 .mdi-bus-articulated-front:before {
   content: "\F79C";
+}
+
+.mdi-bus-clock:before {
+  content: "\F8C9";
 }
 
 .mdi-bus-double-decker:before {
@@ -1521,6 +1541,10 @@
   content: "\F100";
 }
 
+.mdi-camera-account:before {
+  content: "\F8CA";
+}
+
 .mdi-camera-burst:before {
   content: "\F692";
 }
@@ -1539,6 +1563,10 @@
 
 .mdi-camera-gopro:before {
   content: "\F7A0";
+}
+
+.mdi-camera-image:before {
+  content: "\F8CB";
 }
 
 .mdi-camera-iris:before {
@@ -1625,6 +1653,10 @@
   content: "\F7A8";
 }
 
+.mdi-car-limousine:before {
+  content: "\F8CC";
+}
+
 .mdi-car-pickup:before {
   content: "\F7A9";
 }
@@ -1649,12 +1681,28 @@
   content: "\F638";
 }
 
+.mdi-cards-club:before {
+  content: "\F8CD";
+}
+
+.mdi-cards-diamond:before {
+  content: "\F8CE";
+}
+
+.mdi-cards-heart:before {
+  content: "\F8CF";
+}
+
 .mdi-cards-outline:before {
   content: "\F639";
 }
 
 .mdi-cards-playing-outline:before {
   content: "\F63A";
+}
+
+.mdi-cards-spade:before {
+  content: "\F8D0";
 }
 
 .mdi-cards-variant:before {
@@ -1757,8 +1805,16 @@
   content: "\F122";
 }
 
+.mdi-cellphone-message:before {
+  content: "\F8D2";
+}
+
 .mdi-cellphone-settings:before {
   content: "\F123";
+}
+
+.mdi-cellphone-text:before {
+  content: "\F8D1";
 }
 
 .mdi-cellphone-wireless:before {
@@ -1819,6 +1875,10 @@
 
 .mdi-chart-line-variant:before {
   content: "\F7B0";
+}
+
+.mdi-chart-multiline:before {
+  content: "\F8D3";
 }
 
 .mdi-chart-pie:before {
@@ -2007,6 +2067,10 @@
 
 .mdi-circle:before {
   content: "\F764";
+}
+
+.mdi-circle-edit-outline:before {
+  content: "\F8D4";
 }
 
 .mdi-circle-outline:before {
@@ -2269,6 +2333,10 @@
   content: "\F177";
 }
 
+.mdi-cogs:before {
+  content: "\F8D5";
+}
+
 .mdi-coin:before {
   content: "\F178";
 }
@@ -2493,6 +2561,10 @@
   content: "\F19D";
 }
 
+.mdi-credit-card-settings:before {
+  content: "\F8D6";
+}
+
 .mdi-crop:before {
   content: "\F19E";
 }
@@ -2667,6 +2739,18 @@
 
 .mdi-database-search:before {
   content: "\F865";
+}
+
+.mdi-death-star:before {
+  content: "\F8D7";
+}
+
+.mdi-death-star-variant:before {
+  content: "\F8D8";
+}
+
+.mdi-debian:before {
+  content: "\F8D9";
 }
 
 .mdi-debug-step-into:before {
@@ -3261,6 +3345,10 @@
   content: "\F6D2";
 }
 
+.mdi-fedora:before {
+  content: "\F8DA";
+}
+
 .mdi-ferry:before {
   content: "\F213";
 }
@@ -3387,6 +3475,10 @@
 
 .mdi-file-tree:before {
   content: "\F645";
+}
+
+.mdi-file-undo:before {
+  content: "\F8DB";
 }
 
 .mdi-file-video:before {
@@ -3549,6 +3641,10 @@
   content: "\F248";
 }
 
+.mdi-floor-lamp:before {
+  content: "\F8DC";
+}
+
 .mdi-floor-plan:before {
   content: "\F820";
 }
@@ -3571,6 +3667,10 @@
 
 .mdi-folder-download:before {
   content: "\F24D";
+}
+
+.mdi-folder-edit:before {
+  content: "\F8DD";
 }
 
 .mdi-folder-google-drive:before {
@@ -3731,6 +3831,10 @@
 
 .mdi-format-color-text:before {
   content: "\F69D";
+}
+
+.mdi-format-columns:before {
+  content: "\F8DE";
 }
 
 .mdi-format-float-center:before {
@@ -3961,6 +4065,10 @@
   content: "\F28E";
 }
 
+.mdi-freebsd:before {
+  content: "\F8DF";
+}
+
 .mdi-fridge:before {
   content: "\F28F";
 }
@@ -4029,6 +4137,34 @@
   content: "\F299";
 }
 
+.mdi-gate-and:before {
+  content: "\F8E0";
+}
+
+.mdi-gate-nand:before {
+  content: "\F8E1";
+}
+
+.mdi-gate-nor:before {
+  content: "\F8E2";
+}
+
+.mdi-gate-not:before {
+  content: "\F8E3";
+}
+
+.mdi-gate-or:before {
+  content: "\F8E4";
+}
+
+.mdi-gate-xnor:before {
+  content: "\F8E5";
+}
+
+.mdi-gate-xor:before {
+  content: "\F8E6";
+}
+
 .mdi-gauge:before {
   content: "\F29A";
 }
@@ -4063,6 +4199,10 @@
 
 .mdi-gender-transgender:before {
   content: "\F29F";
+}
+
+.mdi-gentoo:before {
+  content: "\F8E7";
 }
 
 .mdi-gesture:before {
@@ -4157,6 +4297,10 @@
   content: "\F2AA";
 }
 
+.mdi-globe-model:before {
+  content: "\F8E8";
+}
+
 .mdi-gmail:before {
   content: "\F2AB";
 }
@@ -4175,6 +4319,10 @@
 
 .mdi-google:before {
   content: "\F2AD";
+}
+
+.mdi-google-allo:before {
+  content: "\F801";
 }
 
 .mdi-google-analytics:before {
@@ -4227,6 +4375,10 @@
 
 .mdi-google-glass:before {
   content: "\F2B8";
+}
+
+.mdi-google-hangouts:before {
+  content: "\F2C9";
 }
 
 .mdi-google-home:before {
@@ -4337,16 +4489,16 @@
   content: "\F684";
 }
 
+.mdi-hammer:before {
+  content: "\F8E9";
+}
+
 .mdi-hand-pointing-right:before {
   content: "\F2C7";
 }
 
 .mdi-hanger:before {
   content: "\F2C8";
-}
-
-.mdi-hangouts:before {
-  content: "\F2C9";
 }
 
 .mdi-harddisk:before {
@@ -4511,6 +4663,14 @@
 
 .mdi-home-heart:before {
   content: "\F826";
+}
+
+.mdi-home-lock:before {
+  content: "\F8EA";
+}
+
+.mdi-home-lock-open:before {
+  content: "\F8EB";
 }
 
 .mdi-home-map-marker:before {
@@ -5085,12 +5245,20 @@
   content: "\F33D";
 }
 
+.mdi-linux-mint:before {
+  content: "\F8EC";
+}
+
 .mdi-loading:before {
   content: "\F771";
 }
 
 .mdi-lock:before {
   content: "\F33E";
+}
+
+.mdi-lock-alert:before {
+  content: "\F8ED";
 }
 
 .mdi-lock-open:before {
@@ -5111,6 +5279,10 @@
 
 .mdi-lock-plus:before {
   content: "\F5FB";
+}
+
+.mdi-lock-question:before {
+  content: "\F8EE";
 }
 
 .mdi-lock-reset:before {
@@ -5207,6 +5379,10 @@
 
 .mdi-map-marker-circle:before {
   content: "\F34F";
+}
+
+.mdi-map-marker-distance:before {
+  content: "\F8EF";
 }
 
 .mdi-map-marker-minus:before {
@@ -5425,6 +5601,14 @@
   content: "\F372";
 }
 
+.mdi-midi:before {
+  content: "\F8F0";
+}
+
+.mdi-midi-port:before {
+  content: "\F8F1";
+}
+
 .mdi-minecraft:before {
   content: "\F373";
 }
@@ -5585,6 +5769,10 @@
   content: "\F75A";
 }
 
+.mdi-nas:before {
+  content: "\F8F2";
+}
+
 .mdi-nativescript:before {
   content: "\F87F";
 }
@@ -5609,20 +5797,56 @@
   content: "\F391";
 }
 
-.mdi-nest-protect:before {
-  content: "\F392";
-}
-
-.mdi-nest-thermostat:before {
-  content: "\F393";
-}
-
 .mdi-netflix:before {
   content: "\F745";
 }
 
 .mdi-network:before {
   content: "\F6F2";
+}
+
+.mdi-network-strength-1:before {
+  content: "\F8F3";
+}
+
+.mdi-network-strength-1-alert:before {
+  content: "\F8F4";
+}
+
+.mdi-network-strength-2:before {
+  content: "\F8F5";
+}
+
+.mdi-network-strength-2-alert:before {
+  content: "\F8F6";
+}
+
+.mdi-network-strength-3:before {
+  content: "\F8F7";
+}
+
+.mdi-network-strength-3-alert:before {
+  content: "\F8F8";
+}
+
+.mdi-network-strength-4:before {
+  content: "\F8F9";
+}
+
+.mdi-network-strength-4-alert:before {
+  content: "\F8FA";
+}
+
+.mdi-network-strength-off:before {
+  content: "\F8FB";
+}
+
+.mdi-network-strength-off-outline:before {
+  content: "\F8FC";
+}
+
+.mdi-network-strength-outline:before {
+  content: "\F8FD";
 }
 
 .mdi-new-box:before {
@@ -6333,8 +6557,16 @@
   content: "\F40F";
 }
 
+.mdi-play-speed:before {
+  content: "\F8FE";
+}
+
 .mdi-playlist-check:before {
   content: "\F5C7";
+}
+
+.mdi-playlist-edit:before {
+  content: "\F8FF";
 }
 
 .mdi-playlist-minus:before {
@@ -6453,6 +6685,18 @@
   content: "\F425";
 }
 
+.mdi-power-cycle:before {
+  content: "\F900";
+}
+
+.mdi-power-off:before {
+  content: "\F901";
+}
+
+.mdi-power-on:before {
+  content: "\F902";
+}
+
 .mdi-power-plug:before {
   content: "\F6A4";
 }
@@ -6465,8 +6709,16 @@
   content: "\F426";
 }
 
+.mdi-power-sleep:before {
+  content: "\F903";
+}
+
 .mdi-power-socket:before {
   content: "\F427";
+}
+
+.mdi-power-socket-au:before {
+  content: "\F904";
 }
 
 .mdi-power-socket-eu:before {
@@ -6479,6 +6731,10 @@
 
 .mdi-power-socket-us:before {
   content: "\F7E8";
+}
+
+.mdi-power-standby:before {
+  content: "\F905";
 }
 
 .mdi-prescription:before {
@@ -6567,6 +6823,10 @@
 
 .mdi-quicktime:before {
   content: "\F436";
+}
+
+.mdi-rabbit:before {
+  content: "\F906";
 }
 
 .mdi-radar:before {
@@ -6789,16 +7049,20 @@
   content: "\F6A8";
 }
 
+.mdi-robot-vacuum:before {
+  content: "\F70C";
+}
+
+.mdi-robot-vacuum-variant:before {
+  content: "\F907";
+}
+
 .mdi-rocket:before {
   content: "\F463";
 }
 
 .mdi-room-service:before {
   content: "\F88C";
-}
-
-.mdi-roomba:before {
-  content: "\F70C";
 }
 
 .mdi-rotate-3d:before {
@@ -6873,6 +7137,10 @@
   content: "\F470";
 }
 
+.mdi-satellite-uplink:before {
+  content: "\F908";
+}
+
 .mdi-satellite-variant:before {
   content: "\F471";
 }
@@ -6899,6 +7167,10 @@
 
 .mdi-scanner:before {
   content: "\F6AA";
+}
+
+.mdi-scanner-off:before {
+  content: "\F909";
 }
 
 .mdi-school:before {
@@ -7325,12 +7597,20 @@
   content: "\F4B1";
 }
 
+.mdi-slackware:before {
+  content: "\F90A";
+}
+
 .mdi-sleep:before {
   content: "\F4B2";
 }
 
 .mdi-sleep-off:before {
   content: "\F4B3";
+}
+
+.mdi-smoke-detector:before {
+  content: "\F392";
 }
 
 .mdi-smoking:before {
@@ -7485,6 +7765,10 @@
   content: "\F763";
 }
 
+.mdi-square-edit-outline:before {
+  content: "\F90B";
+}
+
 .mdi-square-inc:before {
   content: "\F4CA";
 }
@@ -7505,12 +7789,12 @@
   content: "\F8BF";
 }
 
-.mdi-stack-overflow:before {
-  content: "\F4CC";
+.mdi-stack-exchange:before {
+  content: "\F60B";
 }
 
-.mdi-stackexchange:before {
-  content: "\F60B";
+.mdi-stack-overflow:before {
+  content: "\F4CC";
 }
 
 .mdi-stadium:before {
@@ -7549,8 +7833,16 @@
   content: "\F4D3";
 }
 
+.mdi-steam-box:before {
+  content: "\F90C";
+}
+
 .mdi-steering:before {
   content: "\F4D4";
+}
+
+.mdi-steering-off:before {
+  content: "\F90D";
 }
 
 .mdi-step-backward:before {
@@ -7769,6 +8061,10 @@
   content: "\F4F5";
 }
 
+.mdi-table-search:before {
+  content: "\F90E";
+}
+
 .mdi-table-settings:before {
   content: "\F837";
 }
@@ -7799,6 +8095,10 @@
 
 .mdi-tag-heart:before {
   content: "\F68A";
+}
+
+.mdi-tag-minus:before {
+  content: "\F90F";
 }
 
 .mdi-tag-multiple:before {
@@ -7893,6 +8193,14 @@
   content: "\F668";
 }
 
+.mdi-test-tube-empty:before {
+  content: "\F910";
+}
+
+.mdi-test-tube-off:before {
+  content: "\F911";
+}
+
 .mdi-text-shadow:before {
   content: "\F669";
 }
@@ -7931,6 +8239,10 @@
 
 .mdi-thermometer-lines:before {
   content: "\F510";
+}
+
+.mdi-thermostat:before {
+  content: "\F393";
 }
 
 .mdi-thermostat-box:before {
@@ -7975,6 +8287,10 @@
 
 .mdi-ticket-confirmation:before {
   content: "\F518";
+}
+
+.mdi-ticket-outline:before {
+  content: "\F912";
 }
 
 .mdi-ticket-percent:before {
@@ -8081,6 +8397,10 @@
   content: "\F83B";
 }
 
+.mdi-track-light:before {
+  content: "\F913";
+}
+
 .mdi-trackpad:before {
   content: "\F7F7";
 }
@@ -8119,6 +8439,14 @@
 
 .mdi-transit-transfer:before {
   content: "\F6AD";
+}
+
+.mdi-transition:before {
+  content: "\F914";
+}
+
+.mdi-transition-masked:before {
+  content: "\F915";
 }
 
 .mdi-translate:before {
@@ -8201,8 +8529,16 @@
   content: "\F540";
 }
 
+.mdi-tumble-dryer:before {
+  content: "\F916";
+}
+
 .mdi-tumblr:before {
   content: "\F541";
+}
+
+.mdi-tumblr-box:before {
+  content: "\F917";
 }
 
 .mdi-tumblr-reblog:before {
@@ -8437,6 +8773,14 @@
   content: "\F83D";
 }
 
+.mdi-video-account:before {
+  content: "\F918";
+}
+
+.mdi-video-image:before {
+  content: "\F919";
+}
+
 .mdi-video-input-antenna:before {
   content: "\F83E";
 }
@@ -8455,6 +8799,10 @@
 
 .mdi-video-off:before {
   content: "\F568";
+}
+
+.mdi-video-stabilization:before {
+  content: "\F91A";
 }
 
 .mdi-video-switch:before {
@@ -8607,6 +8955,18 @@
 
 .mdi-wall:before {
   content: "\F7FD";
+}
+
+.mdi-wall-sconce:before {
+  content: "\F91B";
+}
+
+.mdi-wall-sconce-flat:before {
+  content: "\F91C";
+}
+
+.mdi-wall-sconce-variant:before {
+  content: "\F91D";
 }
 
 .mdi-wallet:before {
@@ -8821,6 +9181,74 @@
   content: "\F5AA";
 }
 
+.mdi-wifi-strength-1:before {
+  content: "\F91E";
+}
+
+.mdi-wifi-strength-1-alert:before {
+  content: "\F91F";
+}
+
+.mdi-wifi-strength-1-lock:before {
+  content: "\F920";
+}
+
+.mdi-wifi-strength-2:before {
+  content: "\F921";
+}
+
+.mdi-wifi-strength-2-alert:before {
+  content: "\F922";
+}
+
+.mdi-wifi-strength-2-lock:before {
+  content: "\F923";
+}
+
+.mdi-wifi-strength-3:before {
+  content: "\F924";
+}
+
+.mdi-wifi-strength-3-alert:before {
+  content: "\F925";
+}
+
+.mdi-wifi-strength-3-lock:before {
+  content: "\F926";
+}
+
+.mdi-wifi-strength-4:before {
+  content: "\F927";
+}
+
+.mdi-wifi-strength-4-alert:before {
+  content: "\F928";
+}
+
+.mdi-wifi-strength-4-lock:before {
+  content: "\F929";
+}
+
+.mdi-wifi-strength-alert-outline:before {
+  content: "\F92A";
+}
+
+.mdi-wifi-strength-lock-outline:before {
+  content: "\F92B";
+}
+
+.mdi-wifi-strength-off:before {
+  content: "\F92C";
+}
+
+.mdi-wifi-strength-off-outline:before {
+  content: "\F92D";
+}
+
+.mdi-wifi-strength-outline:before {
+  content: "\F92E";
+}
+
 .mdi-wii:before {
   content: "\F5AB";
 }
@@ -8969,16 +9397,16 @@
   content: "\F67F";
 }
 
+.mdi-youtube:before {
+  content: "\F5C3";
+}
+
 .mdi-youtube-creator-studio:before {
   content: "\F846";
 }
 
 .mdi-youtube-gaming:before {
   content: "\F847";
-}
-
-.mdi-youtube-play:before {
-  content: "\F5C3";
 }
 
 .mdi-youtube-tv:before {
