--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "regular";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "2.2.43" !default;
+$mdi-version:          "2.3.50" !default;
 
 $mdi-icons: (
     "access-point": F002,
@@ -25,6 +25,7 @@ $mdi-icons: (
     "account-location": F00C,
     "account-minus": F00D,
     "account-multiple": F00E,
+    "account-multiple-check": F8C4,
     "account-multiple-minus": F5D3,
     "account-multiple-outline": F00F,
     "account-multiple-plus": F010,
@@ -69,12 +70,12 @@ $mdi-icons: (
     "alert-outline": F02A,
     "alien": F899,
     "all-inclusive": F6BD,
-    "allo": F801,
     "alpha": F02B,
     "alphabetical": F02C,
     "altimeter": F5D7,
     "amazon": F02D,
-    "amazon-clouddrive": F02E,
+    "amazon-alexa": F8C5,
+    "amazon-drive": F02E,
     "ambulance": F02F,
     "amplifier": F030,
     "anchor": F031,
@@ -88,17 +89,18 @@ $mdi-icons: (
     "anvil": F89A,
     "apple": F035,
     "apple-finder": F036,
+    "apple-icloud": F038,
     "apple-ios": F037,
     "apple-keyboard-caps": F632,
     "apple-keyboard-command": F633,
     "apple-keyboard-control": F634,
     "apple-keyboard-option": F635,
     "apple-keyboard-shift": F636,
-    "apple-mobileme": F038,
     "apple-safari": F039,
     "application": F614,
     "approval": F790,
     "apps": F03B,
+    "arch": F8C6,
     "archive": F03C,
     "arrange-bring-forward": F03D,
     "arrange-bring-to-front": F03E,
@@ -182,6 +184,7 @@ $mdi-icons: (
     "auto-upload": F069,
     "autorenew": F06A,
     "av-timer": F06B,
+    "axe": F8C7,
     "azure": F804,
     "baby": F06C,
     "baby-buggy": F68E,
@@ -350,9 +353,11 @@ $mdi-icons: (
     "bulletin-board": F0E5,
     "bullhorn": F0E6,
     "bullseye": F5DD,
+    "bullseye-arrow": F8C8,
     "bus": F0E7,
     "bus-articulated-end": F79B,
     "bus-articulated-front": F79C,
+    "bus-clock": F8C9,
     "bus-double-decker": F79D,
     "bus-school": F79E,
     "bus-side": F79F,
@@ -384,11 +389,13 @@ $mdi-icons: (
     "camcorder-box-off": F0FE,
     "camcorder-off": F0FF,
     "camera": F100,
+    "camera-account": F8CA,
     "camera-burst": F692,
     "camera-enhance": F101,
     "camera-front": F102,
     "camera-front-variant": F103,
     "camera-gopro": F7A0,
+    "camera-image": F8CB,
     "camera-iris": F104,
     "camera-metering-center": F7A1,
     "camera-metering-matrix": F7A2,
@@ -410,14 +417,19 @@ $mdi-icons: (
     "car-convertible": F7A6,
     "car-estate": F7A7,
     "car-hatchback": F7A8,
+    "car-limousine": F8CC,
     "car-pickup": F7A9,
     "car-side": F7AA,
     "car-sports": F7AB,
     "car-wash": F10E,
     "caravan": F7AC,
     "cards": F638,
+    "cards-club": F8CD,
+    "cards-diamond": F8CE,
+    "cards-heart": F8CF,
     "cards-outline": F639,
     "cards-playing-outline": F63A,
+    "cards-spade": F8D0,
     "cards-variant": F6C6,
     "carrot": F10F,
     "cart": F110,
@@ -443,7 +455,9 @@ $mdi-icons: (
     "cellphone-iphone": F120,
     "cellphone-link": F121,
     "cellphone-link-off": F122,
+    "cellphone-message": F8D2,
     "cellphone-settings": F123,
+    "cellphone-text": F8D1,
     "cellphone-wireless": F814,
     "certificate": F124,
     "chair-school": F125,
@@ -459,6 +473,7 @@ $mdi-icons: (
     "chart-line": F12A,
     "chart-line-stacked": F76A,
     "chart-line-variant": F7B0,
+    "chart-multiline": F8D3,
     "chart-pie": F12B,
     "chart-scatterplot-hexbin": F66D,
     "chart-timeline": F66E,
@@ -506,6 +521,7 @@ $mdi-icons: (
     "chip": F61A,
     "church": F144,
     "circle": F764,
+    "circle-edit-outline": F8D4,
     "circle-outline": F765,
     "cisco-webex": F145,
     "city": F146,
@@ -571,6 +587,7 @@ $mdi-icons: (
     "coffee": F176,
     "coffee-outline": F6C9,
     "coffee-to-go": F177,
+    "cogs": F8D5,
     "coin": F178,
     "coins": F694,
     "collage": F640,
@@ -627,6 +644,7 @@ $mdi-icons: (
     "credit-card-off": F5E4,
     "credit-card-plus": F675,
     "credit-card-scan": F19D,
+    "credit-card-settings": F8D6,
     "crop": F19E,
     "crop-free": F19F,
     "crop-landscape": F1A0,
@@ -671,6 +689,9 @@ $mdi-icons: (
     "database-minus": F1B9,
     "database-plus": F1BA,
     "database-search": F865,
+    "death-star": F8D7,
+    "death-star-variant": F8D8,
+    "debian": F8D9,
     "debug-step-into": F1BB,
     "debug-step-out": F1BC,
     "debug-step-over": F1BD,
@@ -819,6 +840,7 @@ $mdi-icons: (
     "fast-forward-outline": F6D1,
     "fax": F212,
     "feather": F6D2,
+    "fedora": F8DA,
     "ferry": F213,
     "file": F214,
     "file-account": F73A,
@@ -851,6 +873,7 @@ $mdi-icons: (
     "file-restore": F670,
     "file-send": F22A,
     "file-tree": F645,
+    "file-undo": F8DB,
     "file-video": F22B,
     "file-word": F22C,
     "file-word-box": F22D,
@@ -891,12 +914,14 @@ $mdi-icons: (
     "flattr": F246,
     "flip-to-back": F247,
     "flip-to-front": F248,
+    "floor-lamp": F8DC,
     "floor-plan": F820,
     "floppy": F249,
     "flower": F24A,
     "folder": F24B,
     "folder-account": F24C,
     "folder-download": F24D,
+    "folder-edit": F8DD,
     "folder-google-drive": F24E,
     "folder-image": F24F,
     "folder-key": F8AB,
@@ -937,6 +962,7 @@ $mdi-icons: (
     "format-clear": F265,
     "format-color-fill": F266,
     "format-color-text": F69D,
+    "format-columns": F8DE,
     "format-float-center": F267,
     "format-float-left": F268,
     "format-float-none": F269,
@@ -994,6 +1020,7 @@ $mdi-icons: (
     "forum-outline": F821,
     "forward": F28D,
     "foursquare": F28E,
+    "freebsd": F8DF,
     "fridge": F28F,
     "fridge-filled": F290,
     "fridge-filled-bottom": F291,
@@ -1011,6 +1038,13 @@ $mdi-icons: (
     "gas-cylinder": F647,
     "gas-station": F298,
     "gate": F299,
+    "gate-and": F8E0,
+    "gate-nand": F8E1,
+    "gate-nor": F8E2,
+    "gate-not": F8E3,
+    "gate-or": F8E4,
+    "gate-xnor": F8E5,
+    "gate-xor": F8E6,
     "gauge": F29A,
     "gauge-empty": F872,
     "gauge-full": F873,
@@ -1020,6 +1054,7 @@ $mdi-icons: (
     "gender-male": F29D,
     "gender-male-female": F29E,
     "gender-transgender": F29F,
+    "gentoo": F8E7,
     "gesture": F7CA,
     "gesture-double-tap": F73B,
     "gesture-swipe-down": F73C,
@@ -1043,11 +1078,13 @@ $mdi-icons: (
     "glass-wine": F875,
     "glassdoor": F2A9,
     "glasses": F2AA,
+    "globe-model": F8E8,
     "gmail": F2AB,
     "gnome": F2AC,
     "golf": F822,
     "gondola": F685,
     "google": F2AD,
+    "google-allo": F801,
     "google-analytics": F7CB,
     "google-assistant": F7CC,
     "google-cardboard": F2AE,
@@ -1061,6 +1098,7 @@ $mdi-icons: (
     "google-drive": F2B6,
     "google-earth": F2B7,
     "google-glass": F2B8,
+    "google-hangouts": F2C9,
     "google-home": F823,
     "google-keep": F6DB,
     "google-maps": F5F5,
@@ -1088,9 +1126,9 @@ $mdi-icons: (
     "guy-fawkes-mask": F824,
     "hackernews": F624,
     "hamburger": F684,
+    "hammer": F8E9,
     "hand-pointing-right": F2C7,
     "hanger": F2C8,
-    "hangouts": F2C9,
     "harddisk": F2CA,
     "headphones": F2CB,
     "headphones-box": F2CC,
@@ -1132,6 +1170,8 @@ $mdi-icons: (
     "home-circle": F7D1,
     "home-currency-usd": F8AE,
     "home-heart": F826,
+    "home-lock": F8EA,
+    "home-lock-open": F8EB,
     "home-map-marker": F5F8,
     "home-modern": F2DD,
     "home-outline": F6A0,
@@ -1275,13 +1315,16 @@ $mdi-icons: (
     "linkedin": F33B,
     "linkedin-box": F33C,
     "linux": F33D,
+    "linux-mint": F8EC,
     "loading": F771,
     "lock": F33E,
+    "lock-alert": F8ED,
     "lock-open": F33F,
     "lock-open-outline": F340,
     "lock-outline": F341,
     "lock-pattern": F6E9,
     "lock-plus": F5FB,
+    "lock-question": F8EE,
     "lock-reset": F772,
     "lock-smart": F8B1,
     "locker": F7D6,
@@ -1306,6 +1349,7 @@ $mdi-icons: (
     "map": F34D,
     "map-marker": F34E,
     "map-marker-circle": F34F,
+    "map-marker-distance": F8EF,
     "map-marker-minus": F650,
     "map-marker-multiple": F350,
     "map-marker-off": F351,
@@ -1360,6 +1404,8 @@ $mdi-icons: (
     "microphone-variant-off": F371,
     "microscope": F654,
     "microsoft": F372,
+    "midi": F8F0,
+    "midi-port": F8F1,
     "minecraft": F373,
     "minus": F374,
     "minus-box": F375,
@@ -1400,16 +1446,26 @@ $mdi-icons: (
     "music-note-sixteenth": F38C,
     "music-note-whole": F38D,
     "music-off": F75A,
+    "nas": F8F2,
     "nativescript": F87F,
     "nature": F38E,
     "nature-people": F38F,
     "navigation": F390,
     "near-me": F5CD,
     "needle": F391,
-    "nest-protect": F392,
-    "nest-thermostat": F393,
     "netflix": F745,
     "network": F6F2,
+    "network-strength-1": F8F3,
+    "network-strength-1-alert": F8F4,
+    "network-strength-2": F8F5,
+    "network-strength-2-alert": F8F6,
+    "network-strength-3": F8F7,
+    "network-strength-3-alert": F8F8,
+    "network-strength-4": F8F9,
+    "network-strength-4-alert": F8FA,
+    "network-strength-off": F8FB,
+    "network-strength-off-outline": F8FC,
+    "network-strength-outline": F8FD,
     "new-box": F394,
     "newspaper": F395,
     "nfc": F396,
@@ -1587,7 +1643,9 @@ $mdi-icons: (
     "play-network": F88A,
     "play-pause": F40E,
     "play-protected-content": F40F,
+    "play-speed": F8FE,
     "playlist-check": F5C7,
+    "playlist-edit": F8FF,
     "playlist-minus": F410,
     "playlist-play": F411,
     "playlist-plus": F412,
@@ -1617,13 +1675,19 @@ $mdi-icons: (
     "pound": F423,
     "pound-box": F424,
     "power": F425,
+    "power-cycle": F900,
+    "power-off": F901,
+    "power-on": F902,
     "power-plug": F6A4,
     "power-plug-off": F6A5,
     "power-settings": F426,
+    "power-sleep": F903,
     "power-socket": F427,
+    "power-socket-au": F904,
     "power-socket-eu": F7E6,
     "power-socket-uk": F7E7,
     "power-socket-us": F7E8,
+    "power-standby": F905,
     "prescription": F705,
     "presentation": F428,
     "presentation-play": F429,
@@ -1646,6 +1710,7 @@ $mdi-icons: (
     "quadcopter": F434,
     "quality-high": F435,
     "quicktime": F436,
+    "rabbit": F906,
     "radar": F437,
     "radiator": F438,
     "radio": F439,
@@ -1701,9 +1766,10 @@ $mdi-icons: (
     "road": F461,
     "road-variant": F462,
     "robot": F6A8,
+    "robot-vacuum": F70C,
+    "robot-vacuum-variant": F907,
     "rocket": F463,
     "room-service": F88C,
-    "roomba": F70C,
     "rotate-3d": F464,
     "rotate-left": F465,
     "rotate-left-variant": F466,
@@ -1722,6 +1788,7 @@ $mdi-icons: (
     "salesforce": F88D,
     "sass": F7EB,
     "satellite": F470,
+    "satellite-uplink": F908,
     "satellite-variant": F471,
     "sausage": F8B9,
     "saxophone": F609,
@@ -1729,6 +1796,7 @@ $mdi-icons: (
     "scale-balance": F5D1,
     "scale-bathroom": F473,
     "scanner": F6AA,
+    "scanner-off": F909,
     "school": F474,
     "screen-rotation": F475,
     "screen-rotation-lock": F476,
@@ -1835,8 +1903,10 @@ $mdi-icons: (
     "skype": F4AF,
     "skype-business": F4B0,
     "slack": F4B1,
+    "slackware": F90A,
     "sleep": F4B2,
     "sleep-off": F4B3,
+    "smoke-detector": F392,
     "smoking": F4B4,
     "smoking-off": F4B5,
     "snapchat": F4B6,
@@ -1875,13 +1945,14 @@ $mdi-icons: (
     "spotlight-beam": F4C9,
     "spray": F665,
     "square": F763,
+    "square-edit-outline": F90B,
     "square-inc": F4CA,
     "square-inc-cash": F4CB,
     "square-outline": F762,
     "square-root": F783,
     "ssh": F8BF,
+    "stack-exchange": F60B,
     "stack-overflow": F4CC,
-    "stackexchange": F60B,
     "stadium": F71F,
     "stairs": F4CD,
     "standard-definition": F7EE,
@@ -1891,7 +1962,9 @@ $mdi-icons: (
     "star-off": F4D1,
     "star-outline": F4D2,
     "steam": F4D3,
+    "steam-box": F90C,
     "steering": F4D4,
+    "steering-off": F90D,
     "step-backward": F4D5,
     "step-backward-2": F4D6,
     "step-forward": F4D7,
@@ -1946,6 +2019,7 @@ $mdi-icons: (
     "table-row-plus-after": F4F3,
     "table-row-plus-before": F4F4,
     "table-row-remove": F4F5,
+    "table-search": F90E,
     "table-settings": F837,
     "tablet": F4F6,
     "tablet-android": F4F7,
@@ -1954,6 +2028,7 @@ $mdi-icons: (
     "tag": F4F9,
     "tag-faces": F4FA,
     "tag-heart": F68A,
+    "tag-minus": F90F,
     "tag-multiple": F4FB,
     "tag-outline": F4FC,
     "tag-plus": F721,
@@ -1977,6 +2052,8 @@ $mdi-icons: (
     "tent": F508,
     "terrain": F509,
     "test-tube": F668,
+    "test-tube-empty": F910,
+    "test-tube-off": F911,
     "text-shadow": F669,
     "text-to-speech": F50A,
     "text-to-speech-off": F50B,
@@ -1987,6 +2064,7 @@ $mdi-icons: (
     "theme-light-dark": F50E,
     "thermometer": F50F,
     "thermometer-lines": F510,
+    "thermostat": F393,
     "thermostat-box": F890,
     "thought-bubble": F7F5,
     "thought-bubble-outline": F7F6,
@@ -1998,6 +2076,7 @@ $mdi-icons: (
     "ticket": F516,
     "ticket-account": F517,
     "ticket-confirmation": F518,
+    "ticket-outline": F912,
     "ticket-percent": F723,
     "tie": F519,
     "tilde": F724,
@@ -2024,6 +2103,7 @@ $mdi-icons: (
     "tower-beach": F680,
     "tower-fire": F681,
     "towing": F83B,
+    "track-light": F913,
     "trackpad": F7F7,
     "tractor": F891,
     "traffic-light": F52B,
@@ -2034,6 +2114,8 @@ $mdi-icons: (
     "transcribe-close": F52F,
     "transfer": F530,
     "transit-transfer": F6AD,
+    "transition": F914,
+    "transition-masked": F915,
     "translate": F5CA,
     "treasure-chest": F725,
     "tree": F531,
@@ -2054,7 +2136,9 @@ $mdi-icons: (
     "truck-trailer": F726,
     "tshirt-crew": F53F,
     "tshirt-v": F540,
+    "tumble-dryer": F916,
     "tumblr": F541,
+    "tumblr-box": F917,
     "tumblr-reblog": F542,
     "tune": F62E,
     "tune-vertical": F66A,
@@ -2113,11 +2197,14 @@ $mdi-icons: (
     "video": F567,
     "video-3d": F7FC,
     "video-4k-box": F83D,
+    "video-account": F918,
+    "video-image": F919,
     "video-input-antenna": F83E,
     "video-input-component": F83F,
     "video-input-hdmi": F840,
     "video-input-svideo": F841,
     "video-off": F568,
+    "video-stabilization": F91A,
     "video-switch": F569,
     "view-agenda": F56A,
     "view-array": F56B,
@@ -2156,6 +2243,9 @@ $mdi-icons: (
     "vuejs": F843,
     "walk": F583,
     "wall": F7FD,
+    "wall-sconce": F91B,
+    "wall-sconce-flat": F91C,
+    "wall-sconce-variant": F91D,
     "wallet": F584,
     "wallet-giftcard": F585,
     "wallet-membership": F586,
@@ -2209,6 +2299,23 @@ $mdi-icons: (
     "widgets": F72B,
     "wifi": F5A9,
     "wifi-off": F5AA,
+    "wifi-strength-1": F91E,
+    "wifi-strength-1-alert": F91F,
+    "wifi-strength-1-lock": F920,
+    "wifi-strength-2": F921,
+    "wifi-strength-2-alert": F922,
+    "wifi-strength-2-lock": F923,
+    "wifi-strength-3": F924,
+    "wifi-strength-3-alert": F925,
+    "wifi-strength-3-lock": F926,
+    "wifi-strength-4": F927,
+    "wifi-strength-4-alert": F928,
+    "wifi-strength-4-lock": F929,
+    "wifi-strength-alert-outline": F92A,
+    "wifi-strength-lock-outline": F92B,
+    "wifi-strength-off": F92C,
+    "wifi-strength-off-outline": F92D,
+    "wifi-strength-outline": F92E,
     "wii": F5AB,
     "wiiu": F72C,
     "wikipedia": F5AC,
@@ -2246,9 +2353,9 @@ $mdi-icons: (
     "yeast": F5C1,
     "yelp": F5C2,
     "yin-yang": F67F,
+    "youtube": F5C3,
     "youtube-creator-studio": F846,
     "youtube-gaming": F847,
-    "youtube-play": F5C3,
     "youtube-tv": F448,
     "zip-box": F5C4
 );
