--- a/css/materialdesignicons.css
+++ b/css/materialdesignicons.css
@@ -1,8 +1,8 @@
 /* MaterialDesignIcons.com */
 @font-face {
   font-family: "Material Design Icons";
-  src: url("../fonts/materialdesignicons-webfont.eot?v=2.3.50");
-  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=2.3.50") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=2.3.50") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=2.3.50") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=2.3.50") format("truetype"), url("../fonts/materialdesignicons-webfont.svg?v=2.3.50#materialdesigniconsregular") format("svg");
+  src: url("../fonts/materialdesignicons-webfont.eot?v=2.3.54");
+  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=2.3.54") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=2.3.54") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=2.3.54") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=2.3.54") format("truetype"), url("../fonts/materialdesignicons-webfont.svg?v=2.3.54#materialdesigniconsregular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -6485,6 +6485,14 @@
   content: "\F404";
 }
 
+.mdi-pin-off-outline:before {
+  content: "\F92F";
+}
+
+.mdi-pin-outline:before {
+  content: "\F930";
+}
+
 .mdi-pine-tree:before {
   content: "\F405";
 }
@@ -7395,6 +7403,10 @@
 
 .mdi-share:before {
   content: "\F496";
+}
+
+.mdi-share-outline:before {
+  content: "\F931";
 }
 
 .mdi-share-variant:before {
@@ -8403,6 +8415,10 @@
 
 .mdi-trackpad:before {
   content: "\F7F7";
+}
+
+.mdi-trackpad-lock:before {
+  content: "\F932";
 }
 
 .mdi-tractor:before {
